--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <h1>Chào các bạn</h1>
+    <h2>Thứ nhất</h2>
+    <h3>thứ hai</h3>
+    <h3>Thứ ba</h3>
+    <h4>Thứ tư</h4>
+
 </body>
 
 </html>
